apps/workloads/homepage/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    app: homepage
