apps/workloads/homepage/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-web
  namespace: homepage
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.lab.markaplay.net`)
      kind: Rule
      services:
      - name: homepage
        port: 3000
  tls:
    secretName: homepage-cert
